# evm-simulation

./: Cargo.toml
contracts/src/: Simulator.sol
src/: arbitrage.rs  constants.rs  gmx.rs  honeypot.rs  lib.rs  main.rs  simulator.rs  strategy.rs  tokens.rs  trace.rs
src/interfaces/: gmx.rs  gmx_exchange_router.json  mod.rs  simulator.rs
src/interfaces/abi/gmx_v2/: reader.json
