[package]
name = "evm-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
hex = "0.4.3"
dotenv = "0.15.0"
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
futures = "0.3.5"
async-trait = "0.1.64"
anyhow = "1.0.70"
serde = "1.0.145"
serde_json = "1.0"
itertools = "0.11.0"

cfmms = "*"
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots" }
ethers = { version = "2.0", features = ["abigen", "ws"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-contract = "2.0"
eth-encode-packed = "0.1.0"

# foundry
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "55dd5de4948a92440296f330c779d4ed778c0123" }
anvil = { git = "https://github.com/foundry-rs/foundry", rev = "55dd5de4948a92440296f330c779d4ed778c0123" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "55dd5de4948a92440296f330c779d4ed778c0123" }

# alloy
alloy-primitives = "0.4.2"

colored = "2.0.0"
log = "0.4.17"
indicatif = "0.17.5"
indoc = "2"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.23"
csv = "1.2.2"

[patch.crates-io]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "546ea029362a7502365667c6f99fac92ad0aeb9f" }
ethers-addressbook = { git = "https://github.com/gakonst/ethers-rs", rev = "546ea029362a7502365667c6f99fac92ad0aeb9f" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev = "546ea029362a7502365667c6f99fac92ad0aeb9f" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", rev = "546ea029362a7502365667c6f99fac92ad0aeb9f" }
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs", rev = "546ea029362a7502365667c6f99fac92ad0aeb9f" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev = "546ea029362a7502365667c6f99fac92ad0aeb9f" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", rev = "546ea029362a7502365667c6f99fac92ad0aeb9f" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", rev = "546ea029362a7502365667c6f99fac92ad0aeb9f" }
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", rev = "546ea029362a7502365667c6f99fac92ad0aeb9f" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "546ea029362a7502365667c6f99fac92ad0aeb9f" }

foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers", rev = "714c1537cf09d9a96293aadc633166c97d19da95" }

alloy-dyn-abi = { git = "https://github.com/alloy-rs/core/", rev = "78a4c55c9781cd4f7f1a3558d047a6c94c9cab88" }
alloy-json-abi = { git = "https://github.com/alloy-rs/core/", rev = "78a4c55c9781cd4f7f1a3558d047a6c94c9cab88" }
alloy-primitives = { git = "https://github.com/alloy-rs/core/", rev = "78a4c55c9781cd4f7f1a3558d047a6c94c9cab88" }
alloy-sol-macro = { git = "https://github.com/alloy-rs/core/", rev = "78a4c55c9781cd4f7f1a3558d047a6c94c9cab88" }
alloy-sol-types = { git = "https://github.com/alloy-rs/core/", rev = "78a4c55c9781cd4f7f1a3558d047a6c94c9cab88" }
alloy-sol-type-parser = { git = "https://github.com/alloy-rs/core/", rev = "78a4c55c9781cd4f7f1a3558d047a6c94c9cab88" }
syn-solidity = { git = "https://github.com/alloy-rs/core/", rev = "78a4c55c9781cd4f7f1a3558d047a6c94c9cab88" }

revm = { git = "https://github.com/bluealloy/revm", rev = "1609e07c68048909ad1682c98cf2b9baa76310b5" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "1609e07c68048909ad1682c98cf2b9baa76310b5" }
